注册中心优化