@@ -1,17 +1,24 @@
 package com.yupi.yurpc.registry;
 
 
+import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.collection.ConcurrentHashSet;
+import cn.hutool.cron.CronUtil;
+import cn.hutool.cron.task.Task;
 import cn.hutool.json.JSONUtil;
 import com.yupi.yurpc.config.RegistryConfig;
 import com.yupi.yurpc.model.ServiceMetaInfo;
 import io.etcd.jetcd.*;
 import io.etcd.jetcd.options.GetOption;
 import io.etcd.jetcd.options.PutOption;
+import io.etcd.jetcd.watch.WatchEvent;
 import lombok.extern.slf4j.Slf4j;
 
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -27,6 +34,21 @@ public class EtcdRegistry implements Registry {
      */
     private static final String ETCD_ROOT_PATH = "/rpc/";
 
+    /**
+     * 本机注册的节点 key 集合（用于维护续期）
+     */
+    private final Set<String> localRegisterNodeKeySet = new HashSet<>();
+
+    /**
+     * 正在监听的 key 集合（用于维护监听）
+     */
+    private final Set<String> watchingKeySet = new ConcurrentHashSet<>();
+
+    /**
+     * 注册中心服务缓存
+     */
+    private final RegistryServiceCache registryServiceCache = new RegistryServiceCache();
+
     @Override
     public void init(RegistryConfig registryConfig) {
         client = Client.builder()
@@ -34,27 +56,22 @@ public class EtcdRegistry implements Registry {
                 .connectTimeout(Duration.ofMillis(registryConfig.getTimeout()))
                 .build();
         kvClient = client.getKVClient();
+        heartBeat();
     }
 
     @Override
     public void register(ServiceMetaInfo serviceMetaInfo) throws Exception {
-//        log.info("尝试注册：{}", serviceMetaInfo);
         // 创建 Lease 和 KV 客户端
         Lease leaseClient = client.getLeaseClient();
-//        log.info("创建Lease客户端成功");
 
-        // 创建一个 30 秒的租约
-        // 修改前：无限等待
-        // long leaseId = leaseClient.grant(30).get().getID();
-        // 修改后：只等 3 秒，超时报错
+        // 创建一个 30 秒的租约，只等 3 秒，超时报错
         long leaseId;
         try {
-            leaseId = leaseClient.grant(300).get(3, TimeUnit.SECONDS).getID();
+            leaseId = leaseClient.grant(30).get(3, TimeUnit.SECONDS).getID();
         } catch (Exception e) {
             log.error("连接 Etcd 超时，请检查：\n1. Etcd 是否已启动？\n2. 端口是否应为 2379？\n3. 防火墙是否拦截？", e);
             throw e;
         }
-//        log.info("创建租约成功：{}", leaseId);
 
         // 设置要存储的键值对
         String registerKey = ETCD_ROOT_PATH + serviceMetaInfo.getServiceNodeKey();
@@ -64,14 +81,20 @@ public class EtcdRegistry implements Registry {
         // 绑定租约和键值对，并设置过期时间
         PutOption putOption = PutOption.builder().withLeaseId(leaseId).build();
         kvClient.put(key, value, putOption).get();
+
+        // 添加节点信息到本地缓存记录
+        localRegisterNodeKeySet.add(registerKey);
+
         log.info("注册成功：{}", serviceMetaInfo);
     }
 
     @Override
     public void unRegister(ServiceMetaInfo serviceMetaInfo) {
         try {
-            kvClient.delete(ByteSequence.from(ETCD_ROOT_PATH + serviceMetaInfo.getServiceNodeKey(),
-                    StandardCharsets.UTF_8)).get();
+            String registerKey = ETCD_ROOT_PATH + serviceMetaInfo.getServiceNodeKey();
+            kvClient.delete(ByteSequence.from(registerKey, StandardCharsets.UTF_8)).get();
+            // 删除本地缓存记录
+            localRegisterNodeKeySet.remove(registerKey);
         } catch (Exception e) {
             throw new RuntimeException(serviceMetaInfo.getServiceNodeKey() + " unregister error", e);
         }
@@ -80,6 +103,12 @@ public class EtcdRegistry implements Registry {
 
     @Override
     public List<ServiceMetaInfo> serviceDiscovery(String serviceKey) {
+        // 优先从缓存获取服务
+        List<ServiceMetaInfo> cachedServiceMetaInfoList = registryServiceCache.readCache();
+        if (CollUtil.isNotEmpty(cachedServiceMetaInfoList)) {
+            return cachedServiceMetaInfoList;
+        }
+
         // 前缀搜索，结尾一定要加 '/'
         String searchPrefix = ETCD_ROOT_PATH + serviceKey + "/";
 
@@ -93,27 +122,105 @@ public class EtcdRegistry implements Registry {
                     .getKvs();
 
             // 解析服务信息
-            return keyValues.stream()
+            List<ServiceMetaInfo> serviceMetaInfoList =  keyValues.stream()
                     .map(keyValue -> {
+                        // 监听 key 的变化
+                        String key = keyValue.getKey().toString(StandardCharsets.UTF_8);
+                        watch(key);
                         String value = keyValue.getValue().toString(StandardCharsets.UTF_8);
                         return JSONUtil.toBean(value, ServiceMetaInfo.class);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
+            // 写入服务缓存
+            registryServiceCache.writeCache(serviceMetaInfoList);
+            return serviceMetaInfoList;
         } catch (Exception e) {
             throw new RuntimeException("Fail to get service list", e);
         }
-
     }
 
     @Override
     public void destroy() {
         log.info("当前节点下线");
+
+        // 下线节点，遍历本节点所有key
+        for (String key : localRegisterNodeKeySet) {
+            try {
+                kvClient.delete(ByteSequence.from(key, StandardCharsets.UTF_8)).get();
+            } catch (Exception e) {
+                throw new RuntimeException(key + "节点下线失败", e);
+            }
+        }
+
         // 释放资源
         if (kvClient != null) {
             kvClient.close();
         }
         if (client != null) {
             client.close();
+        }
+    }
+
+    @Override
+    public void heartBeat() {
+        // 10秒一次续期
+        CronUtil.schedule("*/10 * * * * *", new Task() {
+            @Override
+            public void execute() {
+                // 遍历本节点 localRegisterNodeKeySet 所有 key
+                for (String key : localRegisterNodeKeySet) {
+                    try {
+                        List<KeyValue> keyValues = kvClient.get(ByteSequence.from(key, StandardCharsets.UTF_8))
+                                .get()
+                                .getKvs();
+                        // 已过期，需重启才能重新注册
+                        if (CollUtil.isEmpty(keyValues))
+                            continue;
+
+                        // 未过期，重新注册，相当于续期；好处：万一出现数据丢失，也能重新注册
+                        KeyValue keyValue = keyValues.getFirst();
+                        String value = keyValue.getValue().toString(StandardCharsets.UTF_8);
+                        ServiceMetaInfo serviceMetaInfo = JSONUtil.toBean(value, ServiceMetaInfo.class);
+                        register(serviceMetaInfo);
+                    } catch (Exception e) {
+                        throw new RuntimeException(key + "续期失败", e);
+                    }
+                }
+            }
+        });
+
+        // 支持秒级定时任务
+        CronUtil.setMatchSecond(true);
+        CronUtil.start();
+    }
+
+    /**
+     * 监听服务节点，消费端
+     *
+     * @param serviceNodeKey
+     */
+    @Override
+    public void watch(String serviceNodeKey) {
+        Watch watchClient = client.getWatchClient();
+        // 之前未被监听，开启监听
+        boolean newWatch = watchingKeySet.add(serviceNodeKey);
+        if (newWatch) {
+            watchClient.watch(
+                    ByteSequence.from(serviceNodeKey, StandardCharsets.UTF_8),
+                    response -> {
+                        for (WatchEvent event : response.getEvents()) {
+                            switch (event.getEventType()) {
+                                // key删除时触发
+                                case DELETE:
+                                    // 清理注册服务缓存
+                                    registryServiceCache.clearCache();
+                                    break;
+                                case PUT:
+                                default:
+                                    break;
+                            }
+                        }
+                    });
         }
     }
 }
